<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_FCUFLEX_in" Id="{9575cf00-d41f-4634-9e8e-5b7ab40a28b3}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '2'}
TYPE ST_FCUFLEX_in :
STRUCT
	Flags : ST_FCUFLEX_in_bits;
	ActForce : INT;
	ActPos : WORD;
	AccelGravity : INT;
	CommandForce : INT;
	CommandPos : WORD;
	PayloadWeigth : WORD;
	ControlMode : WORD;
	MaxForce : WORD;
	MaxPos : WORD;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>