<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_FCUFLEX_out" Id="{308a1ede-6ad9-41c1-8d20-c9f4b720e8fd}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '2'}
TYPE ST_FCUFLEX_out :
STRUCT
	CommandForce : INT;
	CommandPosition : WORD;
	PayloadWeight : WORD;
	ControlMode : WORD := 3;	// SoftTouch
	WeighPayloadNow : WORD;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>